--- a/client/src/app/modules/quotation/components/domiciliation/domiciliation.component.html
+++ b/client/src/app/modules/quotation/components/domiciliation/domiciliation.component.html
@@ -45,8 +45,7 @@
             <td>
               <autocomplete-postal-code [(model)]="domiciliation.postalCode" [form]="domiciliationForm"
                 [byPassAutocompletValidator]="true" propertyName="postalCode" [isMandatory]="false" label="Code postal"
-                [isDisabled]="!editMode" [conditionnalRequired]="mustDecribeAdresse() && !isStatusOpen"
-                (onOptionSelected)="fillCity($event)">
+                [isDisabled]="!editMode" (onOptionSelected)="fillCity($event)">
               </autocomplete-postal-code>
             </td>
             <td>
@@ -136,9 +135,7 @@
             <td>
               <autocomplete-postal-code [(model)]="domiciliation.activityPostalCode" [form]="domiciliationForm"
                 [byPassAutocompletValidator]="true" propertyName="activityPostalCode" [isMandatory]="false"
-                label="Code postal" [isDisabled]="!editMode"
-                [conditionnalRequired]="instanceOfCustomerOrder && !isStatusOpen"
-                (onOptionSelected)="fillActivityCity($event)">
+                label="Code postal" [isDisabled]="!editMode" (onOptionSelected)="fillActivityCity($event)">
               </autocomplete-postal-code>
             </td>
             <td>
@@ -285,9 +282,7 @@
             <td>
               <autocomplete-postal-code [(model)]="domiciliation.legalGardianPostalCode" [form]="domiciliationForm"
                 [byPassAutocompletValidator]="true" propertyName="legalGardianPostalCode" [isMandatory]="false"
-                label="Code postal" [isDisabled]="!editMode"
-                [conditionnalRequired]="instanceOfCustomerOrder && !isStatusOpen"
-                (onOptionSelected)="fillLegalGardianCity($event)">
+                label="Code postal" [isDisabled]="!editMode" (onOptionSelected)="fillLegalGardianCity($event)">
               </autocomplete-postal-code>
             </td>
             <td>
