--- a/client/src/app/modules/quotation/components/select-attachment-type-dialog/missing-attachment-mail-dialog.component.html
+++ b/client/src/app/modules/quotation/components/select-attachment-type-dialog/missing-attachment-mail-dialog.component.html
@@ -1,100 +1,145 @@
-<h1 *ngIf="service" mat-dialog-title>Demande des pièces manquantes - {{getServiceLabel(service)}}</h1>
-<div mat-dialog-content
-  *ngIf="service && service.assoServiceDocuments && service.assoServiceDocuments.length>0 || selectedAssoServiceDocument || selectedAssoServiceFieldType">
-  <mat-form-field class="full-width">
-    <generic-input [(model)]="searchText" label="Rechercher" [form]="attachmentTypeForm" propertyName="searchText"
-      [isMandatory]="false" [isDisabled]="false"></generic-input>
-  </mat-form-field>
-  <p *ngIf="editMode">Choisissez ci-dessous la liste des pièces jointes à envoyer :</p>
-  <table class="full-width" *ngIf="editMode">
-    <tr>
-      <td>
-        <sort-table class="margin-bottom" (onRowClick)="selectAssoServiceDocument($event)" [columns]="displayedColumns"
-          [noPaddingBottom]="true" [noMaxHeight]="true" [values]="tableAssoServiceDocuments" [filterText]="searchText"
-          tableName="Documents du service" [refreshTable]="refreshTable.asObservable()">
-        </sort-table>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <sort-table class="margin-bottom" (onRowClick)="selectAssoServiceFieldType($event)"
-          [columns]="displayedFieldTypes" [noPaddingBottom]="true" [noMaxHeight]="true"
-          [values]="tableAssoServiceFieldTypes" tableName="Types de champs du service"
-          [refreshTable]="refreshTable.asObservable()">
-        </sort-table>
-      </td>
-    </tr>
-  </table>
-  <p>Pièces demandées : </p>
-  <div *ngIf="selectedAssoServiceDocument && selectedAssoServiceDocument.length>0">
-    <table class="full-width">
-      <tr *ngFor="let assoServiceDocument of selectedAssoServiceDocument; let index = index">
-        <td style="width: 300px;">
-          {{assoServiceDocument.typeDocument.customLabel}} - {{assoServiceDocument.typeDocument.attachmentType.label}}
-          {{assoServiceDocument.isMandatory? " - Obligatoire":""}}
-        </td>
-        <td colspan="3">
-          <generic-textarea [(model)]="assoServiceDocument.formalisteComment" label="Commentaire du formaliste"
-            [form]="attachmentTypeForm" [propertyName]="'formalisteCommentAttachment'+index" [isMandatory]="false"
-            [isDisabled]="!editMode" [numberOfLines]="3"></generic-textarea>
-        </td>
-        <td style="width: 80px;">
-          <button mat-raised-button color="accent" (click)="deleteAssoServiceDocument(index)" *ngIf="editMode"
-            matTooltip="Supprimer de la sélection"><mat-icon style="margin : 0" class="pointer">
-              delete</mat-icon></button>
-        </td>
-      </tr>
-      <tr *ngFor="let assoServiceDocument of selectedAssoServiceDocument; let index = index">
-      </tr>
-    </table>
-  </div>
-  <p>Champs demandés : </p>
-  <div *ngIf="selectedAssoServiceFieldType && selectedAssoServiceFieldType.length>0">
-    <table class="full-width">
-      <tr *ngFor="let assoServiceFieldType of selectedAssoServiceFieldType; let index = index">
-        <td style="width: 300px;">
-          {{assoServiceFieldType.serviceFieldType.label}}
-          {{assoServiceFieldType.isMandatory? " - Obligatoire":""}}
-        </td>
-        <td colspan="3">
-          <generic-textarea [(model)]="assoServiceFieldType.formalisteComment" label="Commentaire du formaliste"
-            [form]="attachmentTypeForm" [propertyName]="'formalisteCommentFieldType'+index" [isMandatory]="false"
-            [isDisabled]="!editMode" [numberOfLines]="3"></generic-textarea>
-        </td>
-        <td style="width: 80px;">
-          <button mat-raised-button color="accent" (click)="deleteAssoServiceFieldType(index)" *ngIf="editMode"
-            matTooltip="Supprimer de la sélection"><mat-icon style="margin : 0" class="pointer">
-              delete</mat-icon></button>
-        </td>
-      </tr>
-      <tr *ngFor="let assoServiceFieldType of selectedAssoServiceFieldType; let index = index">
-      </tr>
-    </table>
-  </div>
-  <table class="full-width">
-    <tr>
-      <td colspan="2"><generic-textarea [(model)]="missingAttachmentQuery.comment" label="Commentaire global"
-          [form]="attachmentTypeForm" propertyName="comment" [isMandatory]="false" [isDisabled]="!editMode"
-          [numberOfLines]="3"></generic-textarea>
-      </td>
-    </tr>
-    <tr>
-      <td><generic-toggle [(model)]="missingAttachmentQuery.sendToMe" label="Me l'envoyer" [form]="attachmentTypeForm"
-          propertyName="sendToMe"></generic-toggle></td>
-      <td><generic-toggle [(model)]="missingAttachmentQuery.copyToMe" label="Me mettre en copie"
-          [form]="attachmentTypeForm" propertyName="copyToMe"></generic-toggle></td>
-    </tr>
-  </table>
-  <p *ngIf="missingAttachmentQuery.createdDateTime">Dernier envoi le {{missingAttachmentQuery.createdDateTime|
-    date:'dd/MM/yyyy HH:mm'}}</p>
-</div>
-<div mat-dialog-content
-  *ngIf="(!service || !service.assoServiceDocuments || service.assoServiceDocuments.length==0) && !selectedAssoServiceDocument">
-  <p>Aucun type de document attendu sur ce service</p>
-</div>
+<mat-tab-group animationDuration="0ms" (selectedTabChange)="onTabChange($event)" [selectedIndex]="index">
+  <mat-tab label="Demande des pièces manquantes">
 
-<div mat-dialog-actions align="end">
-  <button mat-raised-button color="accent" (click)="closeDialog()" *ngIf="editMode">Annuler</button>
-  <button mat-raised-button color="accent" (click)="closeDialog()" *ngIf="!editMode">Fermer</button>
-  <button mat-raised-button color="warn" *ngIf="editMode" (click)="generateMail()">Valider</button>
-</div>
+    <mat-divider class="margin-mat-divider"></mat-divider>
+
+    <h1 *ngIf="service" mat-dialog-title>Demande des pièces manquantes - {{getServiceLabel(service)}}</h1>
+    <div mat-dialog-content
+      *ngIf="service && service.assoServiceDocuments && service.assoServiceDocuments.length>0 || selectedAssoServiceDocument || selectedAssoServiceFieldType">
+      <generic-input [(model)]="searchText" label="Rechercher" [form]="attachmentTypeForm" propertyName="searchText"
+        [isMandatory]="false" [isDisabled]="false"></generic-input>
+      <p *ngIf="editMode">Choisissez ci-dessous la liste des pièces jointes à envoyer :</p>
+      <table class="full-width" *ngIf="editMode">
+        <tr>
+          <td>
+            <sort-table class="margin-bottom" (onRowClick)="selectAssoServiceDocument($event)"
+              [columns]="displayedColumns" [noPaddingBottom]="true" [noMaxHeight]="true"
+              [values]="tableAssoServiceDocuments" [filterText]="searchText" tableName="Documents du service"
+              [refreshTable]="refreshTable.asObservable()">
+            </sort-table>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <sort-table class="margin-bottom" (onRowClick)="selectAssoServiceFieldType($event)"
+              [columns]="displayedFieldTypes" [noPaddingBottom]="true" [noMaxHeight]="true"
+              [values]="tableAssoServiceFieldTypes" tableName="Types de champs du service"
+              [refreshTable]="refreshTable.asObservable()">
+            </sort-table>
+          </td>
+        </tr>
+      </table>
+      <p>Pièces demandées : </p>
+      <div *ngIf="selectedAssoServiceDocument && selectedAssoServiceDocument.length>0">
+        <table class="full-width">
+          <tr *ngFor="let assoServiceDocument of selectedAssoServiceDocument; let index = index">
+            <td style="width: 300px;">
+              {{assoServiceDocument.typeDocument.customLabel}} -
+              {{assoServiceDocument.typeDocument.attachmentType.label}}
+              {{assoServiceDocument.isMandatory? " - Obligatoire":""}}
+            </td>
+            <td colspan="3">
+              <generic-textarea [(model)]="assoServiceDocument.formalisteComment" label="Commentaire du formaliste"
+                [form]="attachmentTypeForm" [propertyName]="'formalisteCommentAttachment'+index" [isMandatory]="false"
+                [isDisabled]="!editMode" [numberOfLines]="3"></generic-textarea>
+            </td>
+            <td style="width: 80px;">
+              <button mat-raised-button color="accent" (click)="deleteAssoServiceDocument(index)" *ngIf="editMode"
+                matTooltip="Supprimer de la sélection"><mat-icon style="margin : 0" class="pointer">
+                  delete</mat-icon></button>
+            </td>
+          </tr>
+          <tr *ngFor="let assoServiceDocument of selectedAssoServiceDocument; let index = index">
+          </tr>
+        </table>
+      </div>
+      <p>Champs demandés : </p>
+      <div *ngIf="selectedAssoServiceFieldType && selectedAssoServiceFieldType.length>0">
+        <table class="full-width">
+          <tr *ngFor="let assoServiceFieldType of selectedAssoServiceFieldType; let index = index">
+            <td style="width: 300px;">
+              {{assoServiceFieldType.serviceFieldType.label}}
+              {{assoServiceFieldType.isMandatory? " - Obligatoire":""}}
+            </td>
+            <td colspan="3">
+              <generic-textarea [(model)]="assoServiceFieldType.formalisteComment" label="Commentaire du formaliste"
+                [form]="attachmentTypeForm" [propertyName]="'formalisteCommentFieldType'+index" [isMandatory]="false"
+                [isDisabled]="!editMode" [numberOfLines]="3"></generic-textarea>
+            </td>
+            <td style="width: 80px;">
+              <button mat-raised-button color="accent" (click)="deleteAssoServiceFieldType(index)" *ngIf="editMode"
+                matTooltip="Supprimer de la sélection"><mat-icon style="margin : 0" class="pointer">
+                  delete</mat-icon></button>
+            </td>
+          </tr>
+          <tr *ngFor="let assoServiceFieldType of selectedAssoServiceFieldType; let index = index">
+          </tr>
+        </table>
+      </div>
+      <table class="full-width">
+        <tr>
+          <td colspan="2"><generic-textarea [(model)]="missingAttachmentQuery.comment" label="Commentaire global"
+              [form]="attachmentTypeForm" propertyName="comment" [isMandatory]="false" [isDisabled]="!editMode"
+              [numberOfLines]="3"></generic-textarea>
+          </td>
+        </tr>
+        <tr>
+          <td><generic-toggle [(model)]="missingAttachmentQuery.sendToMe" label="Me l'envoyer"
+              [form]="attachmentTypeForm" propertyName="sendToMe"></generic-toggle></td>
+          <td><generic-toggle [(model)]="missingAttachmentQuery.copyToMe" label="Me mettre en copie"
+              [form]="attachmentTypeForm" propertyName="copyToMe"></generic-toggle></td>
+        </tr>
+      </table>
+      <p *ngIf="missingAttachmentQuery.createdDateTime">Dernier envoi le {{missingAttachmentQuery.createdDateTime|
+        date:'dd/MM/yyyy HH:mm'}}</p>
+    </div>
+    <div mat-dialog-content
+      *ngIf="(!service || !service.assoServiceDocuments || service.assoServiceDocuments.length==0) && !selectedAssoServiceDocument">
+      <p>Aucun type de document attendu sur ce service</p>
+    </div>
+
+    <div mat-dialog-actions align="end">
+      <button mat-raised-button color="accent" (click)="closeDialog()" *ngIf="editMode">Annuler</button>
+      <button mat-raised-button color="accent" (click)="closeDialog()" *ngIf="!editMode">Fermer</button>
+      <button mat-raised-button color="warn" *ngIf="editMode" (click)="generateMail()">Valider</button>
+    </div>
+
+  </mat-tab>
+  <mat-tab label="Ajouter un nouveau type de document">
+    <h1 mat-dialog-title>Choix du type de document</h1>
+    <div mat-dialog-content>
+      <p>Choisissez le type de document à ajouter ci-dessous :</p>
+      <table class="full-width">
+        <tr>
+          <td>
+            <autocomplete-type-document [(model)]="selectedDocumentType" [form]="documentTypeForm"
+              propertyName="selectedDocumentType" [isMandatory]="true" [isDisabled]="false" label="Type de document"
+              [onlyDisplayWithAttachmentType]="true"></autocomplete-type-document>
+          </td>
+        </tr>
+      </table>
+    </div>
+    <div mat-dialog-actions align="end">
+      <button mat-raised-button color="warn" *ngIf="selectedDocumentType"
+        (click)="addAssoServiceDocumentType(selectedDocumentType)">Ajouter</button>
+    </div>
+  </mat-tab>
+  <mat-tab label="Ajouter un nouveau type de champ">
+    <h1 mat-dialog-title>Choix du type de champ</h1>
+    <div mat-dialog-content>
+      <p>Choisissez le type de champ à ajouter ci-dessous :</p>
+      <table class="full-width">
+        <tr>
+          <td>
+            <select-service-field-type [(model)]="selectedServiceFieldType" propertyName="selectedServiceFieldType"
+              [form]="serviceFieldTypeForm" [isMandatory]="true" label="Type de champ"></select-service-field-type>
+          </td>
+        </tr>
+      </table>
+    </div>
+    <div mat-dialog-actions align="end">
+      <button mat-raised-button color="warn" *ngIf="selectedServiceFieldType"
+        (click)="addAssoServiceFieldType(selectedServiceFieldType)">Ajouter</button>
+    </div>
+  </mat-tab>
+</mat-tab-group>
