--- a/client/src/app/modules/administration/components/referentials/referential-indicator/referential-indicator.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-indicator/referential-indicator.component.html
@@ -49,6 +49,55 @@
             </td>
           </tr>
         </table>
+        <h2>KPIs associés</h2>
+        <table class="full-width">
+          <ng-container *ngFor="let kpi of selectedEntity.kpis;let index = index">
+            <tr style="padding-top:20px">
+              <td colspan="2">
+                <autocomplete-employee [(model)]="kpi.employee" [form]="entityForm" [propertyName]="'employee'+index"
+                  [isMandatory]="true" [isDisabled]="!editMode" label="Collaborateur"></autocomplete-employee>
+              </td>
+              <td colspan="2">
+                <generic-datepicker [(model)]="kpi.applicationDate" label="Date d'application" [form]="entityForm"
+                  [propertyName]="'applicationDate'+index" [isMandatory]="true"
+                  [isDisabled]="!editMode"></generic-datepicker>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <generic-input [(model)]="kpi.minValue" label="Valeur min à atteindre" [form]="entityForm"
+                  [propertyName]="'minValue'+index" [isMandatory]="false" [isDisabled]="!editMode"
+                  type="number"></generic-input>
+              </td>
+              <td>
+                <generic-input [(model)]="kpi.mediumValue" label="Valeur intermédiaire à atteindre" [form]="entityForm"
+                  [propertyName]="'mediumValue'+index" [isMandatory]="false" [isDisabled]="!editMode"
+                  type="number"></generic-input>
+              </td>
+              <td>
+                <generic-input [(model)]="kpi.maxValue" label="Valeur max à atteindre" [form]="entityForm"
+                  [propertyName]="'maxValue'+index" [isMandatory]="true" [isDisabled]="!editMode"
+                  type="number"></generic-input>
+              </td>
+              <td>
+                <generic-input [(model)]="kpi.baseValue" label="Valeur de référence" [form]="entityForm"
+                  [propertyName]="'baseValue'+index" [isMandatory]="false" [isDisabled]="!editMode"
+                  type="number"></generic-input>
+              </td>
+            </tr>
+            <tr *ngIf="editMode">
+              <td colspan="2">
+                <select-employee [(model)]="employeesToCopy" label="Copier sur les employés suivants"
+                  [form]="entityForm" [propertyName]="'employeesToCopy'+index" [isMandatory]="false"></select-employee>
+              </td>
+              <td colspan="2">
+                <button (click)="copyOnOtherEmployees(index)" mat-raised-button color="accent">Copier sur les autres
+                  collaborateurs </button>
+              </td>
+            </tr>
+          </ng-container>
+        </table>
+        <button (click)="addKpi()" mat-raised-button color="accent">Ajouter un KPI</button>
       </fieldset>
     </div>
   </form>
