--- a/client/src/app/modules/reporting/components/indicator/indicator.component.html
+++ b/client/src/app/modules/reporting/components/indicator/indicator.component.html
@@ -1,53 +1,14 @@
-<div class="mat-elevation-z2 form-div">
-  <div>
-    <select-indicator [(model)]="selectedIndicator" label="Indicateur" [form]="indicatorForm"
-      propertyName="selectedIndicator" [isMandatory]="false" [isDisabled]="false"
-      (selectionChange)="refreshIndicator()"></select-indicator>
-  </div>
-</div>
-<div class="dashboard-container mat-elevation-z4" *ngIf="selectedIndicator">
-  <mat-drawer-container class="drawer-container" autosize>
-    <mat-drawer mode="side" opened class="drawer">
-      <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
-
-        <!-- Node feuille (employé) -->
-        <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
-          <mat-checkbox [checked]="isSelected(node)" (change)="toggleSelection(node)">
-            {{ node.name }}
-          </mat-checkbox>
-        </mat-tree-node>
-
-        <!-- Node groupe (dossier) -->
-        <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
-          <div matTreeNodePadding>
-            <button mat-icon-button matTreeNodeToggle>
-              <mat-icon>
-                {{ treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right' }}
-              </mat-icon>
-            </button>
-            <mat-checkbox [checked]="isSelected(node)" [indeterminate]="isIndeterminate(node)"
-              (change)="toggleSelection(node)">
-              {{ node.name }}
-            </mat-checkbox>
-          </div>
-          <div *ngIf="treeControl.isExpanded(node)">
-            <ng-container matTreeNodeOutlet></ng-container>
-          </div>
-        </mat-nested-tree-node>
-      </mat-tree>
-
-    </mat-drawer>
-
-    <mat-drawer-content class="content">
-      <mat-radio-group [(ngModel)]="mode" (ngModelChange)="onEmployeeChange()" class="mode-selector">
-        <mat-radio-button value="monthly">Valeurs mensuelles</mat-radio-button>
-        <mat-radio-button value="cumulative">Cumul depuis le début d'année</mat-radio-button>
-      </mat-radio-group>
-
-      <div echarts [options]="chartOptions" class="chart"></div>
-
-      <sort-table [columns]="displayedColumns" [values]="filteredValues" tableName="Indicateurs">
-      </sort-table>
-    </mat-drawer-content>
-  </mat-drawer-container>
+<div>
+  <mat-tab-group animationDuration="0ms" (selectedTabChange)="onTabChange($event)" [selectedIndex]="index">
+    <mat-tab label="Mes indicateurs">
+      <ng-template matTabContent>
+        <my-indicators></my-indicators>
+      </ng-template>
+    </mat-tab>
+    <mat-tab label="Indicateurs">
+      <ng-template matTabContent>
+        <indicator-detailed></indicator-detailed>
+      </ng-template>
+    </mat-tab>
+  </mat-tab-group>
 </div>
